# hound

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
baselines/: micro_baseline.json
benchmarks/: bench_main.cpp
benchmarks/macro/: README.md  run_macro.sh
benchmarks/micro/: bench_ops.cpp
benchmarks/profiling/: README.md  flamegraph.sh  perf_stat.sh
benchmarks/results/: .gitkeep
benchmarks/synth_generator/: synth.cpp  synth.hpp
docs/: PLANO.md  REFINEMENT.md  TESTING-AND-BENCHMARKS.md
examples/: sample.csv  sample.json
include/hound/: adaptive_edit_distance.hpp  bk_fuzzy_backend.hpp  bk_tree.hpp  bulk_loader.hpp  document.hpp  fuzzy_backend.hpp  fuzzy_index.hpp  http_api.hpp  normalizer.hpp  score_merger.hpp  snapshot.hpp  symspell_backend.hpp  trie.hpp
scripts/: compare_bench.py  run_correctness.sh  run_macro.sh  run_micro.sh  save_baseline.sh  test_compare_bench.sh
src/: main.cpp
tests/concurrency/: test_tsan_rw.cpp
tests/golden/: cases.csv  corpus.csv  test_golden.cpp
tests/integration/: test_http_api.cpp
tests/unit/: test_adaptive_edit_distance.cpp  test_bk_tree.cpp  test_bulk_loader.cpp  test_fuzzy_backend.cpp  test_fuzzy_index.cpp  test_normalizer.cpp  test_score_merger.cpp  test_snapshot.cpp  test_symspell_backend.cpp  test_trie.cpp
tools/: bulk_load.cpp
